# numerical-computing

./: CMakeLists.txt  README.md  main.cpp
examples/src/: lecture_1.cpp  project_1.cpp  project_2.cpp
numerical_computing/: CMakeLists.txt
numerical_computing/include/: ComplexNumber.h  DifferentialEquation.h  Function.h  LinearEquationsSystem.h  Plot.h  Point.h  QuadraticEquation.h  Timer.h  TransferFunction.h
numerical_computing/src/: ComplexNumber.cpp  DifferentialEquation.cpp  Function.cpp  LinearEquationsSystem.cpp  Plot.cpp  Point.cpp  QuadraticEquation.cpp  Timer.cpp  TransferFunction.cpp
numerical_control/: CMakeLists.txt
numerical_control/include/: SystemModel.h
numerical_control/src/: SystemModel.cpp
optimization/: CMakeLists.txt
optimization/include/: DavidonSearch.h  GoldenSectionSearch.h  LevenbergMarquardt.h  NelderMead.h  NewtonRaphson.h  Simplex.h
optimization/src/: DavidonSearch.cpp  GoldenSectionSearch.cpp  LevenbergMarquardt.cpp  NelderMead.cpp  NewtonRaphson.cpp  Simplex.cpp
symbolic_cpp/include/: cloning.h  identity.h  rational.h  verylong.h
symbolic_cpp/include/symbolic/: equation.h  functions.h  integrate.h  number.h  product.h  solve.h  sum.h  symbol.h  symbolic.h  symbolicc++.h  symerror.h  symmatrix.h
